试试关掉content首页

--- a/pages/演技教材·看书.md
+++ b/pages/演技教材·看书.md
@@ -1,8 +1,16 @@
 - > 南方度假獭獭在萨雷安魔法大学勤奋摸鱼。
-  > 这本演技教材中收录的是她在课堂上偷偷传递的纸条、小抄和情书。
+  > 这本演技教材收录了她在课堂上偷偷传递的纸条、小抄和情书。
 -
-- ## Crash Course笔记
+- ## 文化系
 	- [[Crash Course文学课]]
-	-
+-
+- ## 以太系
+-
+- ## 考古系
+-
+- ## 天文系
+-
+- ## 医学系
+-
 	-
 	-
